--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,9 @@
   "eslintConfig": {
     "extends": "react-app"
   },
+  "resolutions": {
+  "@babel/preset-env": "^7.8.7"
+},
   "browserslist": {
     "production": [
       ">0.2%",
@@ -33,3 +36,4 @@
     ]
   }
 }
+
