--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^7.1.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0"
   },
   "scripts": {
@@ -21,8 +22,8 @@
     "extends": "react-app"
   },
   "resolutions": {
-  "@babel/preset-env": "^7.8.7"
-},
+    "@babel/preset-env": "^7.8.7"
+  },
   "browserslist": {
     "production": [
       ">0.2%",
@@ -36,4 +37,3 @@
     ]
   }
 }
-
